CustomerToDetailedCustDto updated to include List<bookingDto>